--- a/basic.compound.html
+++ b/basic.compound.html
@@ -59,7 +59,7 @@ and comparison (<a href='expr.rel'>[expr.rel]</a>, <a href='expr.eq'>[expr.eq]</
 a pointer past the end of the last element of
 an array <span class='texttt'>x</span> of <span class='math'><span class='mathalpha'>n</span></span> elements
 is considered to be equivalent to
-a pointer to a hypothetical element <span class='math'><span class='mathtt'>x[</span><span class='mathalpha'>n</span><span class='mathtt'>]</span></span>.
+a pointer to a hypothetical element <span class='texttt'>x[<span class='math'><span class='mathalpha'>n</span></span>]</span>.
 The value representation of
 pointer types is <span class='indexparent'><a class='index' id='value_representation_of_pointer_types'></a></span>implementation-defined. Pointers to
 layout-compatible types shall
