--- a/basic.def.odr.html
+++ b/basic.def.odr.html
@@ -34,8 +34,7 @@ of <span class='texttt'>n</span> contains the first <span class='texttt'>S::x</s
 struct S { static const int x = 0; };
 const int &amp;f(const int &amp;r);
 int n = b ? (1, S::x)  <span class='comment'>// <span class='texttt'>S::x</span> is not odr-used here
-</span>          : f(S::x);   <span class='comment'>// <span class='texttt'>S::x</span> is odr-used here, so
-</span>                       <span class='comment'>// a definition is required
+</span>          : f(S::x);   <span class='comment'>// <span class='texttt'>S::x</span> is odr-used here, so a definition is required
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]
 <i>&nbsp;—&nbsp;end note</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >A variable <span class='texttt'>x</span> whose name appears as a
 potentially-evaluated expression <span class='texttt'>ex</span> is <a class='hidden_link' href='#def:odr-used' id='def:odr-used'><i>odr-used</i></a> by <span class='texttt'>ex</span> unless
