--- a/basic.lookup.argdep.html
+++ b/basic.lookup.argdep.html
@@ -7,7 +7,8 @@ visible may be found.
 These modifications to the search depend on the types of the arguments
 (and for template template arguments, the namespace of the template
 argument).
-[&nbsp;<i>Example:</i></p><pre class='codeblock'>
+[&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 namespace N {
   struct S { };
   void f(S);
@@ -15,9 +16,8 @@ namespace N {
 
 void g() {
   N::S s;
-  f(s);                         <span class='comment'>// OK: calls <span class='texttt'>N::f</span>
-</span>  (f)(s);                       <span class='comment'>// error: <span class='texttt'>N::f</span> not considered; parentheses
-</span>                                <span class='comment'>// prevent argument-dependent lookup
+  f(s);             <span class='comment'>// OK: calls <span class='texttt'>N::f</span>
+</span>  (f)(s);           <span class='comment'>// error: <span class='texttt'>N::f</span> not considered; parentheses prevent argument-dependent lookup
 </span>}
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><p >For each argument type <span class='texttt'>T</span> in the function call, there is a set of
 zero or more <a class='hidden_link' href='#def:namespace,associated' id='def:namespace,associated'><i>associated namespaces</i></a>
