--- a/basic.lookup.elab.html
+++ b/basic.lookup.elab.html
@@ -29,10 +29,8 @@ struct Node {
 
 struct Data {
   struct Node* Node;            <span class='comment'>// OK: Refers to <span class='texttt'>Node</span> at global scope
-</span>  friend struct ::Glob;         <span class='comment'>// error: <span class='texttt'>Glob</span> is not declared
-</span>                                <span class='comment'>// cannot introduce a qualified type (<a href='dcl.type.elab'>[dcl.type.elab]</a>)
-</span>  friend struct Glob;           <span class='comment'>// OK: Refers to (as yet) undeclared <span class='texttt'>Glob</span>
-</span>                                <span class='comment'>// at global scope.
+</span>  friend struct ::Glob;         <span class='comment'>// error: <span class='texttt'>Glob</span> is not declared, cannot introduce a qualified type (<a href='dcl.type.elab'>[dcl.type.elab]</a>)
+</span>  friend struct Glob;           <span class='comment'>// OK: Refers to (as yet) undeclared <span class='texttt'>Glob</span> at global scope.
 </span>  <span class='comment'>/* ... */</span>
 };
 
