--- a/basic.lookup.unqual.html
+++ b/basic.lookup.unqual.html
@@ -20,8 +20,7 @@ namespace N {
     friend void f(A &amp;);
     operator int();
     void g(A a) {
-      int i = f(a);         <span class='comment'>// <span class='texttt'>f</span> is the typedef, not the friend
-</span>                            <span class='comment'>// function: equivalent to <span class='texttt'>int(a)</span>
+      int i = f(a);  <span class='comment'>// <span class='texttt'>f</span> is the typedef, not the friend function: equivalent to <span class='texttt'>int(a)</span>
 </span>    }
   };
 }
@@ -213,7 +212,7 @@ namespace N {
 
 int i = 2;
 
-int N::j = i;                   <span class='comment'>// <span class='texttt'>N::j == 4</span>
+int N::j = i;       <span class='comment'>// <span class='texttt'>N::j == 4</span>
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='15'><div class='marginalizedparent'><a class='marginalized' href='#15'>15</a></div><p >A name used in the handler for a <i ><a href='except#nt:function-try-block'>function-try-block</a></i>
 (Clause <a href='except'>[except]</a>) is looked up as if the name was used in the
 outermost block of the function definition. In particular, the function
