--- a/basic.scope.html
+++ b/basic.scope.html
@@ -171,8 +171,7 @@ namespace N {
   void q();
 }
 namespace { int l=1; }
-<span class='comment'>// the potential scope of <span class='texttt'>l</span> is from its point of declaration
-</span><span class='comment'>// to the end of the translation unit
+<span class='comment'>// the potential scope of <span class='texttt'>l</span> is from its point of declaration to the end of the translation unit
 </span>
 namespace N {
   int g(char a) {   <span class='comment'>// overloads <span class='texttt'>N::g(int)</span>
@@ -222,8 +221,7 @@ typedef int  c;
 enum { i = 1 };
 
 class X {
-  char  v[i];                       <span class='comment'>// error: <span class='texttt'>i</span> refers to <span class='texttt'>::i</span>
-</span>                                    <span class='comment'>// but when reevaluated is <span class='texttt'>X::i</span>
+  char  v[i];                       <span class='comment'>// error: <span class='texttt'>i</span> refers to <span class='texttt'>::i</span> but when reevaluated is <span class='texttt'>X::i</span>
 </span>  int  f() { return sizeof(c); }    <span class='comment'>// OK: <span class='texttt'>X::c</span>
 </span>  char  c;
   enum { i = 2 };
@@ -231,8 +229,7 @@ class X {
 
 typedef char*  T;
 struct Y {
-  T  a;                             <span class='comment'>// error: <span class='texttt'>T</span> refers to <span class='texttt'>::T</span>
-</span>                                    <span class='comment'>// but when reevaluated is <span class='texttt'>Y::T</span>
+  T  a;                             <span class='comment'>// error: <span class='texttt'>T</span> refers to <span class='texttt'>::T</span> but when reevaluated is <span class='texttt'>Y::T</span>
 </span>  typedef long  T;
   T  b;
 };
