--- a/basic.scope.namespace.html
+++ b/basic.scope.namespace.html
@@ -17,8 +17,7 @@ namespace N {
   void q();
 }
 namespace { int l=1; }
-<span class='comment'>// the potential scope of <span class='texttt'>l</span> is from its point of declaration
-</span><span class='comment'>// to the end of the translation unit
+<span class='comment'>// the potential scope of <span class='texttt'>l</span> is from its point of declaration to the end of the translation unit
 </span>
 namespace N {
   int g(char a) {   <span class='comment'>// overloads <span class='texttt'>N::g(int)</span>
