--- a/basic.types.html
+++ b/basic.types.html
@@ -13,14 +13,13 @@ object can be copied into an array of <span class='texttt'>char</span> or <span 
 <span class='texttt'>char</span>.<a class='footnotenum' href='#footnote-43'>43</a>
 If the content of the array of <span class='texttt'>char</span> or <span class='texttt'>unsigned</span>
 <span class='texttt'>char</span> is copied back into the object, the object shall
-subsequently hold its original value. [&nbsp;<i>Example:</i></p><pre class='codeblock'>
+subsequently hold its original value. [&nbsp;<i>Example:</i>
+</p><pre class='codeblock'>
 #define N sizeof(T)
 char buf[N];
 T obj;                          <span class='comment'>// <span class='texttt'>obj</span> initialized to its original value
-</span>std::memcpy(buf, &amp;obj, N);      <span class='comment'>// between these two calls to <span class='texttt'>std::memcpy</span>,
-</span>                                <span class='comment'>// <span class='texttt'>obj</span> might be modified
-</span>std::memcpy(&amp;obj, buf, N);      <span class='comment'>// at this point, each subobject of <span class='texttt'>obj</span> of scalar type
-</span>                                <span class='comment'>// holds its original value
+</span>std::memcpy(buf, &amp;obj, N);      <span class='comment'>// between these two calls to <span class='texttt'>std::memcpy</span>, <span class='texttt'>obj</span> might be modified
+</span>std::memcpy(&amp;obj, buf, N);      <span class='comment'>// at this point, each subobject of <span class='texttt'>obj</span> of scalar type holds its original value
 </span></pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='3'><div class='marginalizedparent'><a class='marginalized' href='#3'>3</a></div><p >For any trivially copyable type <span class='texttt'>T</span>, if two pointers to <span class='texttt'>T</span> point to
 distinct <span class='texttt'>T</span> objects <span class='texttt'>obj1</span> and <span class='texttt'>obj2</span>, where neither
 <span class='texttt'>obj1</span> nor <span class='texttt'>obj2</span> is a base-class subobject, if the underlying
@@ -346,7 +345,7 @@ and comparison (<a href='expr.rel'>[expr.rel]</a>, <a href='expr.eq'>[expr.eq]</
 a pointer past the end of the last element of
 an array <span class='texttt'>x</span> of <span class='math'><span class='mathalpha'>n</span></span> elements
 is considered to be equivalent to
-a pointer to a hypothetical element <span class='math'><span class='mathtt'>x[</span><span class='mathalpha'>n</span><span class='mathtt'>]</span></span>.
+a pointer to a hypothetical element <span class='texttt'>x[<span class='math'><span class='mathalpha'>n</span></span>]</span>.
 The value representation of
 pointer types is <span class='indexparent'><a class='index' id='value_representation_of_pointer_types'></a></span>implementation-defined. Pointers to
 layout-compatible types shall
