--- a/util.smartptr.shared.create.html
+++ b/util.smartptr.shared.create.html
@@ -5,7 +5,7 @@ template&lt;class T, class A, class... Args&gt;
 </code></p><div class='itemdescr'></div><div class='para' id='1'><div class='marginalizedparent'><a class='marginalized' href='#1'>1</a></div><div class='itemdescr'><p ><i>Requires:</i> The expression <span class='texttt'>::new (pv) T(std::forward&lt;Args&gt;(args)...)</span>,
 where <span class='texttt'>pv</span> has type <span class='texttt'>void*</span> and points to storage suitable
 to hold an object of type <span class='texttt'>T</span>, shall be well formed. <span class='texttt'>A</span> shall
-be an <i>allocator</i> (<a href='allocator.requirements'>[allocator.requirements]</a>). The copy constructor
+be an allocator (<a href='allocator.requirements'>[allocator.requirements]</a>). The copy constructor
 and destructor of <span class='texttt'>A</span> shall not throw exceptions.</p></div></div><div class='para' id='2'><div class='marginalizedparent'><a class='marginalized' href='#2'>2</a></div><div class='itemdescr'><p ><i>Effects:</i> Allocates memory suitable for an object of type <span class='texttt'>T</span>
 and constructs an object in that memory via the placement
 <i ><a href='expr.new#nt:new-expression'>new-expression</a></i>
