--- a/basic.scope.class.html
+++ b/basic.scope.class.html
@@ -23,8 +23,7 @@ typedef int  c;
 enum { i = 1 };
 
 class X {
-  char  v[i];                       <span class='comment'>// error: <span class='texttt'>i</span> refers to <span class='texttt'>::i</span>
-</span>                                    <span class='comment'>// but when reevaluated is <span class='texttt'>X::i</span>
+  char  v[i];                       <span class='comment'>// error: <span class='texttt'>i</span> refers to <span class='texttt'>::i</span> but when reevaluated is <span class='texttt'>X::i</span>
 </span>  int  f() { return sizeof(c); }    <span class='comment'>// OK: <span class='texttt'>X::c</span>
 </span>  char  c;
   enum { i = 2 };
@@ -32,8 +31,7 @@ class X {
 
 typedef char*  T;
 struct Y {
-  T  a;                             <span class='comment'>// error: <span class='texttt'>T</span> refers to <span class='texttt'>::T</span>
-</span>                                    <span class='comment'>// but when reevaluated is <span class='texttt'>Y::T</span>
+  T  a;                             <span class='comment'>// error: <span class='texttt'>T</span> refers to <span class='texttt'>::T</span> but when reevaluated is <span class='texttt'>Y::T</span>
 </span>  typedef long  T;
   T  b;
 };
